<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".EntryModule.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/edFname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:imeOptions="actionNext"
        style="@style/CustomEditText" />

 <EditText
        android:id="@+id/edLname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
     android:imeOptions="actionNext"
        style="@style/CustomEditText" />

 <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
     android:imeOptions="actionNext"
        style="@style/CustomEditText" />

    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        style="@style/CustomEditText" />


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:backgroundTint="@color/light_yellow"
        android:textColor="@color/dark_blue"
        style="@style/CustomButton"/>



    <TextView
        android:id="@+id/txtResetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reset My Password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"/>

    </LinearLayout>

</ScrollView>